proj/parser/ParserL0.jj
PARSER_BEGIN(Parser)

package proj.parser;

import proj.ast.*;
import proj.*;

import java.util.*;

public class Parser {
}

PARSER_END(Parser)

SKIP :
{
  " "
| "\t"
| "\r"
| "\n"
}

TOKEN :
{

  < LET : "let" >
  |
  < TRUE: "true" >
  |
  < FALSE: "false" >
  |
  < NIL: "nil" >
  |
  < PLUS : "+" >
  |
  < MINUS : "-">
  |
  < STAR : "*">
  |
  < DIV : "/">
  |
  < LPAR : "(" >
  |
  < RPAR : ")" >
  |
  < LBRA : "{" >
  |
  < RBRA : "}" >
  |
  < EQUAL : "=" >
  |
  < COLON : ":" >
  |
  < CONS : "::" >
  |
  < LCONS : ":?" >
  |
  < SEMIC : ";" >
  |
  < TERM : ";;" >
  |
  < COMMA : "," >
  |
  < VERT : "|" >
  |
  < AND : "&&" >
  |
  < OR : "||" >
  |
  < EQ : "==" >
  |  
  < GT : ">" >
  |
  < LT : "<" >
  |
  < GTEQ : ">=" >
  |
  < LTEQ : "<=" >
  |
  < DIF : "~=" >
  |
  < NOT : "~" >
  |
  < ASSIGN : ":=" >
  |
  < BOX : "box" >
  |
  < IF : "if" >
  |
  < ELSE : "else" >
  |
  < WHILE : "while" >
  |
  < PRINT : "print" >
  |
  < PRINTLN : "println" >
  |
  < FN : "fn" >
  |
  < ARROW : "=>" >
  |
  < SLIMARROW : "->" >
  |
  < MATCH : "match" >
  |
  < String: "\"" ( (~["\"","\\"]) | ("\\" ( ["n","t","b","r","f","\\","\""] ) ) )* "\"" >
  |
  < Id: ["a"-"z","A"-"Z"] ( ["a"-"z","A"-"Z","0"-"9"] )* >
  |
  < Num: (["0"-"9"]) + >
}

ASTNode Start():
{ ASTNode t; }
{
    <EOF> {return null;}
  | t = Let() <TERM> { return t; }
}

ASTNode Let() :
{ Token n; 
  ASTNode t, e1, e2;
  List<Bind> decls  = new ArrayList<Bind>();;
}
{ 
    (
    t = Seq()
    |
    ((<LET>  n=<Id>  <EQUAL> e1 = BA() <SEMIC>
      { decls.add(new Bind(n.image,e1)); }
     )+
        e2 = Seq() { t = new ASTLet(decls, e2); })
    )
    
   { return t; }
}

ASTNode Seq() :
{Token op;
  ASTNode t1, t2;}
{
     t1 = SeqExp() ( ( op=<SEMIC> ) t2 = SeqExp() 
 		 {
		 t1 = new ASTSeq(t1, t2);
     } 
		)*
     { return t1; }  
}

ASTNode SeqExp() :
{Token op;
  ASTNode t1, t2, t;}
{
     t1 = BA() ( ( op=<ASSIGN> ) t2 = SeqExp() 
 		 {
		 t1 = new ASTAssign(t1, t2);
     } 
		)?
     { return t1; }
}

ASTNode BA() :
{Token op;
  ASTNode t1, t2;}
{
     t1 = BM() ( ( op=<OR> ) t2 = BM() 
 		 {
     t1 = new ASTOr(t1, t2);
		 } 
		)*
     { return t1; } 
}

ASTNode BM() :
{Token op;
  ASTNode t1, t2;}
{
     t1 = Rel() ( ( op=<AND> ) t2 = Rel() 
 		 {
		 t1 = new ASTAnd(t1, t2);
 		 } 
		)*
     { return t1; } 
}


ASTNode Rel() :
{Token op;
  ASTNode t1, t2;}
{
     t1 = Exp() ( ( op=<EQ> | op=<GT> | op=<LT> | op=<GTEQ> | op=<LTEQ> | op=<DIF>) t2 = Exp() 
     {
     if (op.kind == EQ) t1 = new ASTEq(t1,t2);
     else if (op.kind == GT) t1 = new ASTGt(t1,t2);
     else if (op.kind == LT) t1 = new ASTLt(t1,t2);
     else if (op.kind == GTEQ) t1 = new ASTGteq(t1,t2);
     else if (op.kind == LTEQ) t1 = new ASTLteq(t1,t2);
     else t1 = new ASTDif(t1,t2);
		 } 
		)?
     { return t1; } 
}


ASTNode Exp() :
{ Token op;
  ASTNode t1, t2; }
{
     t1=Term() ( ( op=<PLUS> | op=<MINUS> ) t2=Term() 
                 { if (op.kind == PLUS) 
                         t1 = new ASTPlus(t1,t2);
                   else  t1 = new ASTSub(t1,t2);
                 } 
               ) *
     { return t1; } 
}

ASTNode Term() :
{Token op;
  ASTNode t1, t2;}
{
     t1 = Fact() ( (op=<CONS>|op=<LCONS>) t2 = Term() {
              if (op.kind == CONS) t1 = new ASTCons(t1,t2);
              else t1 = new ASTLcons(t1,t2);
     }
    |
    (
     op=<STAR> t2 = Fact()   { t1 = new ASTMult(t1,t2); }
		 |
		 op=<DIV> t2 = Fact()  { t1 = new ASTDiv(t1,t2); }
		 |
		 op = <LPAR> t2 = Exp () <RPAR>  { t1 = new ASTApp(t1, t2); }
		)*)
     { return t1; }
}


ASTNode Fact() :
{ Token n, n2; 
  ASTNode t, e1, e2, t2;
  List<Bind> decls;
  ASTNode body, alt;
  ASTFunc tf, tc, tn;
}
{
   (
      n=<Num> { t = new ASTInt(Integer.parseInt(n.image)); } 
    | n=<TRUE> { t = new ASTBool(Boolean.parseBoolean(n.image)); }
    | n=<FALSE> { t = new ASTBool(Boolean.parseBoolean(n.image)); }
    | n=<Id> { t = new ASTId(n.image); }
    | n=<String> { t = new ASTString(n.image); }
    | <BOX> t=Fact() { t = new ASTBox(t); }
    | <STAR> t=Fact() { t = new ASTDeref(t); }
    | <MINUS> t=Fact() { t = new ASTNeg(t); }
    | <NOT> t=Fact() { t = new ASTNot(t); }
    | <IF> t=BA() <LBRA> e1=Let() <RBRA> <ELSE> <LBRA> e2=Let() <RBRA> { t = new ASTIf(t, e1, e2); }
    | <WHILE> t=BA() <LBRA> body=Let() <RBRA> { t = new ASTWhile(t, body); }
    | <FN> n=<Id> { tf = new ASTFunc(n.image, null); tc = tf; }
      	   	  (<COMMA> n = <Id>  { tn = new ASTFunc(n.image, null); tc.setBody(tn); tc = tn; })*
		  <ARROW> <LBRA> e2 = Let() <RBRA> { tc.setBody(e2); t = tf; }
    | <PRINT> t=Fact() { t = new ASTPrint(t, false); }
    | <PRINTLN> t=Fact() { t = new ASTPrint(t, true); }
    | n=<NIL> { t = new ASTNil(); }
    | <MATCH> t = Fact() <LBRA> 
            <NIL> <SLIMARROW> e1 = Let() <VERT>
            n = <Id> <CONS> n2 = <Id> <SLIMARROW> e2 = Let() <RBRA>
            { t = new ASTMatch(t, e1, n.image, n2.image, e2); }
    | <LPAR> t=Let() <RPAR> 
    )
   { return t; }
}
